# regnbue

./: .gitignore  AUDIT.md  CLAUDE.md  DATA_KARTLEGGING.md  DECISIONS.md  EXPERIMENTS.md  OVERSIKT_OG_FORSLAG.md  PLAN.md  STATE.md  TASKS.md  pyproject.toml  update.sh
.claude/: launch.json
.github/workflows/: pages.yml
config/: swap_rates.yaml
config/instruments/: audusd.yaml  brent.yaml  btcusd.yaml  cocoa.yaml  coffee.yaml  copper.yaml  corn.yaml  cotton.yaml  ethusd.yaml  eurusd.yaml  gbpusd.yaml  gold.yaml  nasdaq.yaml  natgas.yaml  platinum.yaml  silver.yaml  soybean.yaml  sp500.yaml  sugar.yaml  usdjpy.yaml  wheat.yaml  wti.yaml
scripts/: ctrader_depth_spike.py  driver_ablation.py  gen_universe_fingerprints.py
src/setups/: __init__.py  clean.py  ctrader_prices.py  gate.py  generator.py  outcomes.py  publish.py  run.py  scenario.py  scenario_arbitrate.py  scenario_fm.py  secrets.py  seed.py  store.py  validate.py
src/setups/fetch/: __init__.py  eia.py  fred.py  gamma.py  squeeze.py  weather.py
src/setups/score/: __init__.py  context.py  drivers.py  engine.py  grade.py
systemd/: setups.service  setups.timer
tests/: test_arbitrate.py  test_clean.py  test_ctrader_prices.py  test_fetch_fred.py  test_fetch_squeeze.py  test_fetch_weather.py  test_gamma.py  test_gate.py  test_generator.py  test_publish.py  test_scenario.py  test_score.py  test_smoke.py  test_store.py  test_validate.py
web/: index.html
web/data/: scenario_models.json  setups.json
